changed .collect to .toList